--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
       box-sizing: border-box;
     }
 
-    body {
+    html, body {
+      height: 100%;
       font-family: 'Inter', sans-serif;
       scroll-behavior: smooth;
       line-height: 1.6;
       background: #f9fafc;
       color: #333;
+    }
+
+    body {
       display: flex;
+      flex-direction: column;
     }
 
     /* Sidebar */
@@ -112,6 +117,7 @@
       margin-left: 250px;
       padding: 80px 20px 20px;
       flex: 1;
+      min-height: calc(100vh - 80px); /* Ensures content stretches to fill viewport minus footer */
     }
 
     section {
@@ -204,6 +210,7 @@
       background: #111;
       color: #fff;
       margin-left: 250px;
+      width: calc(100% - 250px);
     }
   </style>
 </head>
