--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
 
   <!-- Sidebar -->
   <div class="sidebar">
-    <img src="/images/profl.jpg" alt="Profile Picture">
+    <img src="/images/profile.jpg" alt="Profile Picture">
     <h2>Abdirahman Dubow</h2>
     <p>Shenyang University of Technology</p>
     <p class="location">Shenyang, China</p>
