--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     .sidebar p {
       font-size: 0.9rem;
-      font-family: cursive;
+      font-family: sans-serif;
       color: #05387b;
     }
 
