--- a/index.html
+++ b/index.html
@@ -32,16 +32,15 @@
     .hamburger {
       display: none;
       font-size: 1.5rem;
-      color: #05387b;
+      color: #000;
       position: absolute;
-      top: 1rem;
+      top: 0.5rem;
       right: 1rem;
       z-index: 1000;
       cursor: pointer;
-      background: white;
+      /* background: white; */
       padding: 0.5rem;
       border-radius: 4px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
 
     .hamburger .close {
